Fix the cell shift command and its cell repainting for non-contiguous selections.
Properly update the canvas on changing sheets.
Fix right-to-left layouts (except for shapes).
Prevent the canvas from staying blank at startup.
Fix the reference size grip handling.
Accelerate startup after opening a file of a foreign format.
Reactivate the 'Insert series..' action.
Fix the border painting of the column/row headers and the select all button.
Fix the right mouse button interaction for the column/row headers.

Developer-Visible Only
----------------------
Improved the function module loading/unloading. (@PACKAGERS: plugin interface changed!)
Implement models for Map/Sheet/Region.




Changes for KSpread 1.5 Beta 1
==============================

Features
--------
Non-contiguous selection
Rewritten dependency handling
Embedded picture/image inside workbook
Improved and faster formula calculation
Manual line break (wish #9881)
Syntax highlight and function autocomplete for formula editing
Custom sheet selection and ordering in print dialog

Enhancements
------------
QWhatsThis help is available to various dialogs
Updated dialog screenshot in the handbook
Default autofill increment is set to 1 if only one cell is selected
Sum button automatically selects a suitable cell range
Percent operator in formula (wish #101217)
Improved zoomed printouts (bug #115879)
Use standard KDE font dialog in cell format dialog (bug #116991)
Faster redraw of merged cells (bug #118248)

Bug Fixes
---------
#120234: Freeze on circular reference
#120232: Strange behaviour on creating new file
#120204: Cell comment isn't wrapped
#119675: Background brush color is not correctly loaded
#119097: Right arrow for entry and validation
#118769: Better wording cursor movement setting
#117435: Incorrect result from COUNTIF function
#117252: Fix date (and time) increment for autofill
#116903: Indentation setting is not correctly handled in preferences
#116901: Unclear unit setting in preferences